<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sample</groupId>
   <artifactId>testEE7</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
     <dependency>
        <groupId>javax</groupId>
        <artifactId>javaee-web-api</artifactId>
        <version>7.0</version>
      </dependency>
      <!-- Hibernate用 -->
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>4.2.4.Final</version>
      </dependency>
      <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-entitymanager</artifactId>
      <version>4.2.4.Final</version>
    </dependency>
    <!-- MySQLに繋げる -->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.26</version>
    </dependency>

   </dependencies>
   <build>
     <finalName>testEE7</finalName>
     <plugins>
       <!-- Set to compile using JDK 7 -->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version>
            <configuration>
            <source>1.7</source>
            <target>1.7</target>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <version>2.3</version>
          <configuration>
            <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.wildfly.plugins</groupId>
          <artifactId>wildfly-maven-plugin</artifactId>
          <version>1.0.1.Final</version>
          <configuration>
            <jboss-home>${wildfly.home}</jboss-home>
            <modules-path>${wildfly.home}/modules</modules-path>
            <jvm-args>-ea -Xms64m -Xmx512m -XX:MaxPermSize=256m
                      -Djava.net.preferIPv4Stack=true
                      -Djboss.server.base.dir=${wildfly.home}/standalone
                      -Djboss.socket.binding.port-offset=${wildfly.port.offset}</jvm-args>
            <port>${wildfly.port.mgmt}</port>
          </configuration>
        </plugin>
     </plugins>
   </build>
 </project>